--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
 :root {
     --main-text-color: #495367;
     --secondary-text-color: #8A53FF;
+    --description-text-color: #576074;
 }
 
 .nav_section {
@@ -257,12 +258,254 @@
 
 .share_container {
     background: url(img/share_background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     justify-content: center;
-    padding: 0px 100px;
+    padding: 100px 0px;
 }
 
 .share_wrapper {
+    gap: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.share_content_wrapper {
     background-color: #fff;
-    border-radius: ;
+    padding: 30px;
+    border-radius: 12px;
+    width: 600px;
+}
+
+.share_content {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.share_content_title {
+    color: var(--main-text-color);
+    font-family: "Changa One";
+    font-size: 24px;
+}
+
+.share_texts {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.share_content_description {
+    color: var(--description-text-color);
+    font-size: 18px;
+    width: 550px;
+    line-height: 34px;
+}
+
+.share_inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.share_input {
+    height: 56px;
+    outline: none;
+    border: #0000001d 1px solid;
+    border-radius: 4px;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 0px 20px;
+    width: 100%;
+    box-sizing: border-box; 
+}
+
+.dropdown-container {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+}
+
+.share_input {
+    height: 60px;
+    outline: none;
+    border: #0000001d 1px solid;
+    border-radius: 4px;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 0px 40px 0px 20px;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: #fff;
+    appearance: none;
+    -webkit-appearance: none;
+}
+
+.dropdown-container::after {
+    content: "▼";
+    font-size: 12px;
+    color: grey; 
+    position: absolute;
+    right: 20px;
+    top: 52%;
+    transform: translateY(-50%) scaleY(50%);
+    pointer-events: none;
+}
+
+.share_submit {
+    color: #fff;
+    background-color: var(--secondary-text-color);
+    padding: 15px 100px;
+    border: none;
+    font-size: 16px;
+    font-weight: 300;
+    border-radius: 4px;
+    width: max-content;
+}
+
+input::-webkit-calendar-picker-indicator {
+    opacity: 0; 
+}
+
+.recent_container {
+    padding: 100px 300px;
+}
+
+.recent_wrapper {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 50px;
+}
+
+.recent_main_grid {
+    gap: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.recent_content_grid {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 20px;
+    align-items: baseline
+}
+
+.recent_main_card {
+    display: flex;
+    flex-direction: column;
+}
+
+.recent_main_card_title {
+    font-size: 24px;
+    color: var(--main-text-color);
+    font-family: "Changa One";
+}
+
+.recent_main_card_description {
+    color: var(--description-text-color);
+    font-size: 16px;
+    line-height: 26px;
+}
+
+.recent_main_card_content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    padding: 20px;
+    background-color: #F9F9F9;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+
+.recent_main_card_texts {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    gap: 2px;
+    width: 430px;
+}
+
+.recent_play_button_icon > img {
+    filter: brightness(0) saturate(100%) invert(100%);
+    width: 22px;
+    height: 22px;
+}
+
+.recent_play_button_icon {
+    width: 48px;
+    height: 48px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    background-color: var(--secondary-text-color);
+    border-radius: 50%;
+}
+
+.recent_story_card {
+    background-color: #F9F9F9;
+    border-radius: 8px;
+    padding: 8px;
+}
+
+.recent_story_card_content {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.recent_story_card_texts {
+    padding-top: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.recent_story_card_title {
+    font-size: 24px;
+    color: var(--main-text-color);
+    font-family: "Changa One";
+}
+
+.recent_story_card_img {
+    height: 100%;
+}
+
+.recent_story_card_description {
+    color: var(--description-text-color);
+    font-size: 15px;
+    line-height: 26px;
+}
+
+.recent_story_card_texts {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.footer_section {
+    height: 80px;
+    padding: 0px 120px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer_links {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    align-items: center;
+    gap: 40px;
+    font-weight: 300;
+    color: #939EB4;
+    font-size: 14px;
+}
+
+.rights_reserved {
+    font-weight: 300;
+    color: #939EB4;
+    font-size: 14px;
 }
